--- a/index.html
+++ b/index.html
@@ -2,27 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/Meeple-Streamline-Tabler.svg" />
+    <link rel="icon" type="image/svg+xml" href="public/img/Meeple-Streamline-Tabler.svg" />
     <link rel="stylesheet" type="text/css" href="public/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="../src/component/HomepageComponent.ts"></script>
+
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <div>
-        <h1>Gatherspiel</h1>
-
-        <img src="public/gatherspiel_logo.svg" width="400px"></img>
-        <p>Gatherspiel is a non-commercial open source platform to support in person board game events. Contact
-          gulu@createthirdplaces.com for more details </p>
-
-        <p> If you are interested in helping with project development, go  <a href="https://github.com/gatherspiel">here</a>
-        </p>
-
-        <p></p>
-      </div>
-
-    </div>
+    <homepage-component></homepage-component>
 
   </body>
 </html>
