--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="../src/component/HomepageComponent.ts"></script>
 
-    <title>Vite + TS</title>
+    <title>Gatherspiel</title>
   </head>
   <body>
     <homepage-component></homepage-component>
