--- a/src/feedback.html
+++ b/src/feedback.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Submit feedback</title>
-  <link rel="stylesheet" type="text/css" href="public/styles/style.css">
-  <script type="module" src="../src/component/FeedbackPageComponent.ts"></script>
+  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+  <script type="module" src="component/FeedbackPageComponent.ts"></script>
 </head>
 <body>
   <feedback-page-component></feedback-page-component>
