--- a/src/help.html
+++ b/src/help.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>How to help</title>
-  <link rel="stylesheet" type="text/css" href="public/styles/style.css">
-  <script type="module" src="../src/component/HelpPageComponent.ts"></script>
+  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+  <script type="module" src="component/HelpPageComponent.ts"></script>
 </head>
 <body>
   <help-page-component></help-page-component>
