--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/img/Meeple-Streamline-Tabler.svg" />
-    <link rel="stylesheet" type="text/css" href="public/styles/style.css">
+    <link rel="icon" type="image/svg+xml" href="/img/Meeple-Streamline-Tabler.svg" />
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="../src/component/HomepageComponent.ts"></script>
+    <script type="module" src="/component/HomepageComponent.ts"></script>
 
     <title>Gatherspiel</title>
   </head>
