--- a/src/vision.html
+++ b/src/vision.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Vision</title>
-  <link rel="stylesheet" type="text/css" href="public/styles/style.css">
-  <script type="module" src="../src/component/VisionComponent.ts"></script>
+  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+  <script type="module" src="component/VisionComponent.ts"></script>
 </head>
 <body>
   <vision-component></vision-component>
