--- a/src/feedback.html
+++ b/src/feedback.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>Submit feedback</title>
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
-  <script type="module" src="component/FeedbackPageComponent.ts"></script>
 </head>
 <body>
-  <feedback-page-component></feedback-page-component>
+  <div class="content">
+  {{>navbar}}
+    <div class="container">
+  <p>To submit feedback or thoughts on new features, send an email to gulu@createthirdplaces.com.</p>`
+    </div>
+  </div>
+
 </body>
 </html>
