--- a/src/help.html
+++ b/src/help.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <title>How to help</title>
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
-  <script type="module" src="component/HelpPageComponent.ts"></script>
 </head>
 <body>
-  <help-page-component></help-page-component>
+  <div class="container">
+    {{>navbar}}
+
+    <div class="content">
+  <p>If you are interested in helping, send an email to gulu@createthirdplaces.com.</p>
+  <p>Source code for the project is <a href="https://github.com/gatherspiel">here.</a></p>
+      </div>
+  </div>
 </body>
 </html>
