--- a/src/score.html
+++ b/src/score.html
@@ -10,6 +10,7 @@
           position: fixed;
           top: 0;
           bottom: 0;
+          left: 0;
           width: 100%;
           z-index: -100;
           background-color: var(--clr-very-light-blue)
