Update vision page

--- a/src/vision.html
+++ b/src/vision.html
@@ -33,8 +33,7 @@
 
   <p>All users will see the same content, and Gatherspiel will not provide personalized recommendations. Gatherspiel
     encourages getting recommendations through connecting with others in person at events.  When users see events or
-    other content on Gatherspiel, it should be because they made a decision to view that.
-    content.
+    other content on Gatherspiel, it should be because they made a decision to view that content.
   </p>
 
   <h2>Non Commercial</h2>
