--- a/src/feedback.html
+++ b/src/feedback.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Submit feedback</title>
-  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 <body>
   <div class="content">
