--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/Meeple-Streamline-Tabler.svg" />
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Gatherspiel</title>
