--- a/src/score.html
+++ b/src/score.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Score Tracker</title>
-  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 
   <style>
       #background {
