--- a/src/shared/navbar.html
+++ b/src/shared/navbar.html
@@ -1,4 +1,3 @@
-<div class="container">
   <div class="navbar">
     <nav>
       <a href="index.html">Home</a>
@@ -6,11 +5,10 @@
       <a href="help.html">Looking to help </a>
       <a href="feedback.html">Share feedback</a>
       <a href="score.html">Score tracker</a>
+      <a href="designers.html">German style board games</a>
 
     </nav>
+    <div id="monopolyContent"></div>
   </div>
-  <div class="content">
-  </div>
-</div>
 
-<div id="monopolyContent"></div>
+
