--- a/src/designers.html
+++ b/src/designers.html
@@ -26,13 +26,31 @@
 
   <div id="designers-wrapper" class='page-section'>
     <div class="left-col">
-      <h1>Games designed by people from West Germany</h1>
+      <h1>Games designed by people from Germany</h1>
       <div class="section-separator-small"></div>
 
-      <h2><a href="https://www.knizia.de/">Reiner Knizia</a></h2>
+      <h2><a href="https://boardgamegeek.com/boardgamedesigner/117/andreas-seyfarth">Andreas Seyfarth</a></h2>
+      <ul>
+        <li><a href="https://boardgamegeek.com/boardgame/3076/puerto-rico">Puerto Rico</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/8217/san-juan">San Juan</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/21790/thurn-and-taxis">Thurn and Taxis</a></li>
+      </ul>
+
+      <h2>><a href="https://www.inka-und-markus-brand.de/">Inka and Markus Brand</a></h2>
+      <ul>
+        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/220877/rajas-of-the-ganges">Rajas of Ganges</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/104006/village">Village</a></li>
+
+      </ul>
+
+
       <ul>
         <li><a href="https://boardgamegeek.com/boardgame/220/high-society">High Society</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/266083/llama">Llama</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/34585/keltis">Keltis</a></li>
+
         <li><a href="https://boardgamegeek.com/boardgame/46/medici">Medici</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/118/modern-art">Modern Art</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/12/ra">Ra</a></li>
@@ -40,45 +58,82 @@
         <li><a href="https://boardgamegeek.com/boardgame/42/tigris-and-euphrates">Tigris and Euphrates</a></li>
       </ul>
 
+
       <h2>Games by other designers</h2>
       <ul>
+        <li><a href="https://boardgamegeek.com/boardgame/6249/alhambra">Alhambra</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/230802/azul">Azul</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/158899/colt-express">Camel Up</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/13/catan">Catan</a></li>
+
         <li><a href="https://boardgamegeek.com/boardgame/822/carcassonne">Carcassone</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/370591/dorfromantik-the-board-game">Dorfromantik: The Board Game</a></li>
+
         <li><a href="https://boardgamegeek.com/boardgame/367966/endeavor-deep-sea">Endeavor:Deep Sea</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/127398/legends-of-andor">Legends of Andor</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/318977/micromacro-crime-city">MicroMacro: Crime City</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/13308/niagara">Niagara</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/284108/pictures">Pictures</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/284083/the-crew-the-quest-for-planet-nine">The Crew: The Quest for Planet Nine</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/54/tikal">Tikal</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/27588/zooloretto">Zooleratto</a></li>
+
+
       </ul>
 
     </div>
     <div class="right-col">
       <h1>Other games</h1>
-      <p>These games won German game awards </p>
+      <p>These games designed outsite Germany won German game awards </p>
 
-      <h2>Spiel des Jahres</h2>
 
       <h2>Kennerspiel des Jahres</h2>
       <div class="section-separator-small"></div>
 
       <ul>
-        <li><a href="https://boardgamegeek.com/boardgame/367966/endeavor-deep-seal">Endeavor:Deep Sea</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/334986/daybreak">Daybreak</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/359970/challengers">Challengers</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/328479/living-forest">Living Forest</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/284083/the-crew-the-quest-for-planet-nine">Endeavor:Deep Sea</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/266192/wingspan">Endeavor:Deep Sea</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/244521/quacks">Endeavor:Deep Sea</a></li>
-        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/176494/isle-of-skye-from-chieftain-to-king">Exit:The Game</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/68448/7-wonders">7 Wonders</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/172308/broom-service">Broom Service</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/127398/legends-of-andor">Legends of Andor</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/104006/village">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/68448/7-wonders">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/295947/cascadia">Cascadia</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/359970/challengers">Challengers</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/334986/daybreak">Daybreak</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/367966/endeavor-deep-seal">Endeavor:Deep Sea</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/176494/isle-of-skye-from-chieftain-to-king">Isle of Skye: From Chieftan to King</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/328479/living-forest">Living Forest</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/244521/quacks">Quacks</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/266192/wingspan">Wingspan</a></li>
 
       </ul>
 
+      <h2>Spiel des Jahres</h2>
+      <ul>
+        <li><a href="https://boardgamegeek.com/boardgame/413246/bomb-busters">Bomb Busters</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/178900/codenames">Codenames</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/158899/colt-express">Colt Express</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/39856/dixit">Dixit</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/36218/dominion">Dominion</a></li>
 
+        <li><a href="https://boardgamegeek.com/boardgame/98778/hanabi">Hanabi</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/254640/just-one">Just one</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/107529/kingdom-builder">Kingdom Builder</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/204583/kingdomino">Kingdomino</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/45/perudo">Perudo</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/811/rummikub">Rummikub</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/25669/qwirkle">Qwirkle</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/373106/sky-team">Sky team</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/9209/ticket-to-ride">Ticket to Ride</a></li>
+
+
+      </ul>
 
 
     </div>
