--- a/src/designers.html
+++ b/src/designers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>German-style board games></title>
+  <title>German-style board games</title>
   <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 
   <link rel="stylesheet" href="/styles/designers.css">
@@ -17,7 +17,7 @@
   <div id="designer-content">
 
     <div id='page-info' class='page-section'>
-      <p>There are a variety of German-style games and designers. Here are some of the designers and games they are known for.
+      <p>There are a variety of German-style games and designers. This page contains some of the designers and games they are known for.
         Email gulu@createthirdplaces.com to suggest a designer or game that should be added.</p>
     </div>
   </div>
@@ -26,67 +26,82 @@
 
   <div id="designers-wrapper" class='page-section'>
     <div class="left-col">
-      <h1>Games designed by people from Germany</h1>
+
+      <h1>German Designers</h1>
       <div class="section-separator-small"></div>
 
-      <h2><a href="https://boardgamegeek.com/boardgamedesigner/117/andreas-seyfarth">Andreas Seyfarth</a></h2>
+      <h2>Here are some of the most well-known German games</h2>
       <ul>
-        <li><a href="https://boardgamegeek.com/boardgame/3076/puerto-rico">Puerto Rico</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/8217/san-juan">San Juan</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/268586/6-nimmt-25-jahre">6 Nimmit</a></li>
 
-        <li><a href="https://boardgamegeek.com/boardgame/21790/thurn-and-taxis">Thurn and Taxis</a></li>
-      </ul>
+        <li><a href="https://boardgamegeek.com/boardgame/31260/agricola">Agricola</a></li>
 
-      <h2>><a href="https://www.inka-und-markus-brand.de/">Inka and Markus Brand</a></h2>
-      <ul>
-        <li><a href="https://boardgamegeek.com/boardgamefamily/36963/series-exit-the-game">Exit:The Game</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/220877/rajas-of-the-ganges">Rajas of Ganges</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/104006/village">Village</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/342942/ark-nova">Ark Nova</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/230802/azul">Azul</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/158899/colt-express">Camel Up</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/822/carcassonne">Carcassone</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/401216/cascadero">Cascadero</a></li>
 
-      </ul>
+        <li><a href="https://boardgamegeek.com/boardgame/84876/the-castles-of-burgundy">Castles of Burgundy</a></li>
 
+        <li><a href="https://boardgamegeek.com/boardgame/13/catan">Catan</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/124361/concordia">Concordia</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/93/el-grande">El Grande</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/172/for-sale">For Sale</a></li>
 
-      <ul>
-        <li><a href="https://boardgamegeek.com/boardgame/220/high-society">High Society</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/266083/llama">Llama</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/34585/keltis">Keltis</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/220308/gaia-project">Gaia Project</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/43015/hansa-teutonica">Hansa Teutonica</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/24181/imperial">Imperial</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/148949/istanbul">Istanbul</a></li>
 
         <li><a href="https://boardgamegeek.com/boardgame/46/medici">Medici</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/118/modern-art">Modern Art</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/12942/no-thanks">No Thanks! </a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/164928/orleans">Orléans</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/2651/power-grid">Power Grid</a></li>
+
+        <li><a href="https://boardgamegeek.com/boardgame/3076/puerto-rico">Puerto Rico</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/12/ra">Ra</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/217372/the-quest-for-el-dorado">The Quest for El Dorado</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/42/tigris-and-euphrates">Tigris and Euphrates</a></li>
-      </ul>
-
-
-      <h2>Games by other designers</h2>
-      <ul>
-        <li><a href="https://boardgamegeek.com/boardgame/6249/alhambra">Alhambra</a></li>
-
-        <li><a href="https://boardgamegeek.com/boardgame/230802/azul">Azul</a></li>
-
-        <li><a href="https://boardgamegeek.com/boardgame/158899/colt-express">Camel Up</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/13/catan">Catan</a></li>
-
-        <li><a href="https://boardgamegeek.com/boardgame/822/carcassonne">Carcassone</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/370591/dorfromantik-the-board-game">Dorfromantik: The Board Game</a></li>
-
-        <li><a href="https://boardgamegeek.com/boardgame/367966/endeavor-deep-sea">Endeavor:Deep Sea</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/127398/legends-of-andor">Legends of Andor</a></li>
-
-        <li><a href="https://boardgamegeek.com/boardgame/318977/micromacro-crime-city">MicroMacro: Crime City</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/13308/niagara">Niagara</a></li>
-
-        <li><a href="https://boardgamegeek.com/boardgame/284108/pictures">Pictures</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/417197/rebirth">Rebirth</a></li>
 
         <li><a href="https://boardgamegeek.com/boardgame/284083/the-crew-the-quest-for-planet-nine">The Crew: The Quest for Planet Nine</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/54/tikal">Tikal</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/324856/the-crew-mission-deep-sea">The Crew: Mission Deep Sea</a></li>
 
-        <li><a href="https://boardgamegeek.com/boardgame/27588/zooloretto">Zooleratto</a></li>
-
-
+        <li><a href="https://boardgamegeek.com/boardgame/42/tigris-and-euphrates">Tigris and Euphrates</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/120677/terra-mystica">Terra Mystica</a></li>
       </ul>
 
+
+
+
+      <h2>Other German games</h2>
+      <ul>
+        <li><a href="https://boardgamegeek.com/boardgame/6249/alhambra">Alhambra</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/370591/dorfromantik-the-board-game">Dorfromantik: The Board Game</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/367966/endeavor-deep-sea">Endeavor:Deep Sea</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/34585/keltis">Keltis</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/127398/legends-of-andor">Legends of Andor</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/318977/micromacro-crime-city">MicroMacro: Crime City</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/13308/niagara">Niagara</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/284108/pictures">Pictures</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/54/tikal">Tikal</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/27588/zooloretto">Zooleratto</a></li>
+      </ul>
+
+      <h2>German board game designers </h2>
+      <ul>
+        <li><a href="https://boardgamegeek.com/boardgamedesigner/117/andreas-seyfarth">Andreas Seyfarth</a></li>
+        <li><a href="https://boardgamegeek.com/boardgamedesigner/141/friedemann-friese">Friedemann Friese</a></li>
+
+        <li><a href="https://www.inka-und-markus-brand.de/">Inka and Markus Brand</a></li>
+        <li><a href="https://boardgamegeek.com/boardgamedesigner/6045/mac-gerdts">Mac Gerdts</a></li>
+        <li><a href="https://www.knizia.de/">Reiner Knizia</a></li>
+        <li><a href="https://boardgamegeek.com/boardgamedesigner/4958/stefan-feld">Stefan Feld</a></li>
+        <li><a href="https://boardgamegeek.com/boardgamedesigner/10/uwe-rosenberg">Uwe Rosenberg</a></li>
+
+      </ul>
     </div>
     <div class="right-col">
       <h1>Other games</h1>
@@ -117,22 +132,15 @@
         <li><a href="https://boardgamegeek.com/boardgame/158899/colt-express">Colt Express</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/39856/dixit">Dixit</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/36218/dominion">Dominion</a></li>
-
         <li><a href="https://boardgamegeek.com/boardgame/98778/hanabi">Hanabi</a></li>
-
         <li><a href="https://boardgamegeek.com/boardgame/254640/just-one">Just one</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/107529/kingdom-builder">Kingdom Builder</a></li>
-
         <li><a href="https://boardgamegeek.com/boardgame/204583/kingdomino">Kingdomino</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/45/perudo">Perudo</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/811/rummikub">Rummikub</a></li>
-
         <li><a href="https://boardgamegeek.com/boardgame/25669/qwirkle">Qwirkle</a></li>
-
         <li><a href="https://boardgamegeek.com/boardgame/373106/sky-team">Sky team</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/9209/ticket-to-ride">Ticket to Ride</a></li>
-
-
       </ul>
 
 
