--- a/src/designers.html
+++ b/src/designers.html
@@ -139,7 +139,7 @@
         <li><a href="https://boardgamegeek.com/boardgame/45/perudo">Perudo</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/811/rummikub">Rummikub</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/25669/qwirkle">Qwirkle</a></li>
-        <li><a href="https://boardgamegeek.com/boardgame/373106/sky-team">Sky team</a></li>
+        <li><a href="https://boardgamegeek.com/boardgame/373106/sky-team">Sky Team</a></li>
         <li><a href="https://boardgamegeek.com/boardgame/9209/ticket-to-ride">Ticket to Ride</a></li>
       </ul>
 
