--- a/src/vision.html
+++ b/src/vision.html
@@ -9,7 +9,7 @@
   <div class="container">
   {{>navbar}}
     <div class="content">
-  <p>The main goal of Gatherspiel is to promote human connection through board games. To
+  <p>The main goal of Gatherspiel is to promote human connection through board games and promote public third spaces. To
     promote this goal, these guidelines wil be followed for any changes.</p>
 
   <h2>Support for in person interaction</h2>
