--- a/src/vision.html
+++ b/src/vision.html
@@ -9,8 +9,8 @@
   <div class="container">
   {{>navbar}}
     <div class="content">
-  <p>The main goal of Gatherspiel is to promote human connection through board games and promote public third spaces. To
-    promote this goal, these guidelines wil be followed for any changes.</p>
+  <p>The goal of gatherspiel.com is to promote human connection through board games as a way of 
+     increasing interest in public spaces.To promote this goal, these guidelines wil be followed for any changes.</p>
 
   <h2>Support for in person interaction</h2>
 
