--- a/src/vision.html
+++ b/src/vision.html
@@ -10,7 +10,7 @@
   {{>navbar}}
     <div class="content">
   <p>The goal of gatherspiel.com is to promote human connection through board games as a way of 
-     increasing interest in public spaces.To promote this goal, these guidelines wil be followed for any changes.</p>
+     increasing interest in public spaces.To promote this goal, these guidelines will be followed for any changes.</p>
 
   <h2>Support for in person interaction</h2>
 
