--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
       <img src="/img/gatherspiel_logo.svg" width="400px"></img>
       <p>Gatherspiel is a non-commercial open source platform to support in person board game events. Contact
-        gulu@createthirdplaces.com for more details. </p>
+        gulu@createthirdplaces.org for more details. </p>
       </p>
 
       <p><a href="https://dmvboardgames.com/">Here</a> is an example of a site built using the Gatherspiel platform.</p>
