--- a/src/help.html
+++ b/src/help.html
@@ -10,7 +10,7 @@
     {{>navbar}}
 
     <div class="content">
-  <p>If you are interested in helping, send an email to gulu@createthirdplaces.com.</p>
+  <p>If you are interested in helping, send an email to gulu@createthirdplaces.org.</p>
   <p>Source code for the project is <a href="https://github.com/gatherspiel">here.</a></p>
       </div>
   </div>
