--- a/src/feedback.html
+++ b/src/feedback.html
@@ -9,7 +9,7 @@
   <div class="content">
   {{>navbar}}
     <div class="container">
-  <p>To submit feedback or thoughts on new features, send an email to gulu@createthirdplaces.com.</p>`
+  <p>To submit feedback or thoughts on new features, send an email to gulu@createthirdplaces.org.</p>`
     </div>
   </div>
 
